Fix missing line breaks in lesson subtitles

--- a/src/app/lesson/lesson.scss
+++ b/src/app/lesson/lesson.scss
@@ -2,6 +2,11 @@
   display: block;
 }
 
-img {
+.lesson img {
   max-width: 100%;
+}
+
+.lesson h1,
+.lesson h2 {
+  text-align: center;
 }
